Final auto deployment fix

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -10,4 +10,8 @@ COPY . .
 
 EXPOSE 5000
 
-CMD ["python", "app.py"]
+RUN apt-get update && apt-get install -y netcat
+COPY wait-for-db.sh /wait-for-db.sh
+RUN chmod +x /wait-for-db.sh
+
+CMD ["/wait-for-db.sh"]
