--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,27 @@
+version: "3.9"
+
 services:
 
-  mysql:
-    image: mysql:8
+  # ---------------- MYSQL DATABASE ----------------
+  db:
+    image: mysql:8.0
     container_name: realestate_mysql
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: root
+      MYSQL_ROOT_PASSWORD: Vidhi@4104
       MYSQL_DATABASE: realestate_db
     ports:
-      - "3307:3306"
+      - "3306:3306"
     volumes:
+      - db_data:/var/lib/mysql
       - ./backend/initdb:/docker-entrypoint-initdb.d
     healthcheck:
-      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost" ]
-      interval: 5s
+      test: [ "CMD", "mysqladmin", "ping", "-h", "localhost", "-pVidhi@4104" ]
+      interval: 10s
       timeout: 5s
       retries: 10
 
+  # ---------------- FLASK BACKEND ----------------
   backend:
     build: ./backend
     container_name: realestate_backend
@@ -24,9 +29,10 @@ services:
     ports:
       - "5000:5000"
     depends_on:
-      mysql:
+      db:
         condition: service_healthy
 
+  # ---------------- REACT FRONTEND ----------------
   frontend:
     build: ./frontend
     container_name: realestate_frontend
@@ -35,3 +41,6 @@ services:
       - "3000:80"
     depends_on:
       - backend
+
+volumes:
+  db_data:
